; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_varobj.c_varobj_set_display_format.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_varobj.c_varobj_set_display_format.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.varobj = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @varobj_set_display_format(%struct.varobj* %0, i32 %1) #0 {
  %3 = alloca %struct.varobj*, align 8
  %4 = alloca i32, align 4
  store %struct.varobj* %0, %struct.varobj** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  switch i32 %5, label %10 [
    i32 129, label %6
    i32 132, label %6
    i32 131, label %6
    i32 130, label %6
    i32 128, label %6
  ]

6:                                                ; preds = %2, %2, %2, %2, %2
  %7 = load i32, i32* %4, align 4
  %8 = load %struct.varobj*, %struct.varobj** %3, align 8
  %9 = getelementptr inbounds %struct.varobj, %struct.varobj* %8, i32 0, i32 0
  store i32 %7, i32* %9, align 4
  br label %15

10:                                               ; preds = %2
  %11 = load %struct.varobj*, %struct.varobj** %3, align 8
  %12 = call i32 @variable_default_display(%struct.varobj* %11)
  %13 = load %struct.varobj*, %struct.varobj** %3, align 8
  %14 = getelementptr inbounds %struct.varobj, %struct.varobj* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 4
  br label %15

15:                                               ; preds = %10, %6
  %16 = load %struct.varobj*, %struct.varobj** %3, align 8
  %17 = getelementptr inbounds %struct.varobj, %struct.varobj* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  ret i32 %18
}

declare dso_local i32 @variable_default_display(%struct.varobj*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
